--- a/app/src/main/res/layout/fragment_project_1_n_maintain_prism4d.xml
+++ b/app/src/main/res/layout/fragment_project_1_n_maintain_prism4d.xml
@@ -84,7 +84,7 @@
                     android:imeOptions="flagNoExtractUi"
                     android:layout_marginEnd="16dp"
 
-                    android:textColor="@color/colorPureRed"
+                    android:textColor="@color/colorTextBlack"
                     android:background="@color/colorWhite"
                     />
 
@@ -121,7 +121,7 @@
                     android:imeOptions="flagNoExtractUi"
                     android:layout_marginEnd="16dp"
 
-                    android:textColor="@color/colorPureRed"
+                    android:textColor="@color/colorTextBlack"
                     android:background="@color/colorWhite"
                     />
 
@@ -157,7 +157,7 @@
                     android:inputType="text"
                     android:layout_marginEnd="16dp"
 
-                    android:textColor="@color/colorPureRed"
+                    android:textColor="@color/colorTextBlack"
                     android:background="@color/colorWhite"
                     />
 
@@ -194,7 +194,7 @@
                     android:imeOptions="flagNoExtractUi"
                     android:layout_marginEnd="16dp"
 
-                    android:textColor="@color/colorPureRed"
+                    android:textColor="@color/colorTextBlack"
                     android:background="@color/colorWhite"
                     />
 
@@ -237,7 +237,7 @@
                     android:imeOptions="flagNoExtractUi"
                     android:layout_marginEnd="16dp"
 
-                    android:textColor="@color/colorPureRed"
+                    android:textColor="@color/colorTextBlack"
                     android:background="@color/colorWhite"
                     />
 
@@ -353,7 +353,7 @@
     </ScrollView>
 
     <!-- The Footer will be as standard as possible -->
-    <include layout="@layout/fragment_footer_inclusion_prism4_dmockup"/>
+    <include layout="@layout/fragment_footer_inclusion_prism4d"/>
 
 
 </LinearLayout>
