--- a/app/src/main/res/layout/fragment_top_matrix_prism4d.xml
+++ b/app/src/main/res/layout/fragment_top_matrix_prism4d.xml
@@ -6,15 +6,13 @@
     android:background="@color/colorScreenBackground"
     android:orientation="vertical"
     >
-    <!-- This layout is for The top level projects screen with
-         the 9 button matrix plus footer -->
-    <!-- The only difference between portrait and landscape
-         is the scroll view weight:
-         for landscape 2.5, portrait 5 -->
+    <!-- This layout is for a top level selection screen with the 9 button page matrix plus footer -->
+    <!-- This is a generic screen, specific text and images will be added programmatically   -->
+
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="5"
+        android:layout_weight="2.5"
         >
 
         <!-- with layout_width = 0dp, ignore the content width, for horiz orient   -->
@@ -35,12 +33,14 @@
                 android:layout_gravity="top|center_vertical"
                 android:shrinkColumns="*"
                 android:stretchColumns="*"
+
             >
 
+
+
             <!-- Row 1 with 3 columns for buttons - - >
-            <!- Create Open Copy  -->
+            <!- row1Button1 row1Button2 row1Button3  -->
             <TableRow
-                android:id="@+id/tableRow1"
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:layout_gravity="center_horizontal"
@@ -51,56 +51,50 @@
 
                 <Button
                     style="?android:attr/buttonBarButtonStyle"
-                    android:id="@+id/createButton"
-                    android:text="@string/create_button_label"
+                    android:id="@+id/row1Button1"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:background="@color/colorGray"
+                    android:background="@color/colorWhite"
                     android:textColor="@color/colorTextBlack"
                     android:paddingStart="5dp"
                     android:paddingEnd="5dp"
                     android:gravity="center"
                     android:layout_gravity="start"
-
                     />
 
                 <Button
                     style="?android:attr/buttonBarButtonStyle"
-                    android:id="@+id/openButton"
-                    android:text="@string/open_button_label"
+                    android:id="@+id/row1Button2"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:background="@color/colorGrayer"
+                    android:background="@color/colorWhite"
                     android:textColor="@color/colorTextBlack"
                     android:paddingStart="5dp"
                     android:paddingEnd="5dp"
                     android:gravity="center"
                     android:layout_gravity="center_horizontal"
-
                     />
 
                 <Button
                     style="?android:attr/buttonBarButtonStyle"
-                    android:id="@+id/copyButton"
-                    android:text="@string/copy_button_label"
+                    android:id="@+id/row1Button3"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:background="@color/colorGrayest"
+                    android:background="@color/colorWhite"
                     android:textColor="@color/colorTextBlack"
                     android:paddingStart="5dp"
                     android:paddingEnd="5dp"
                     android:gravity="center"
                     android:layout_gravity="end"
-
                     />
 
             </TableRow>
 
             <!-- Row 2 with 3 columns for buttons - - >
-            <!- Edit Delete Control   -->
+            <!-  row2Button1 row2Button2 row2Button3  -->
             <TableRow
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
@@ -110,55 +104,50 @@
 
                 <Button
                     style="?android:attr/buttonBarButtonStyle"
-                    android:id="@+id/editButton"
-                    android:text="@string/edit_button_label"
+                    android:id="@+id/row2Button1"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:background="@color/colorGray"
+                    android:background="@color/colorWhite"
                     android:textColor="@color/colorTextBlack"
                     android:paddingStart="5dp"
                     android:paddingEnd="5dp"
                     android:gravity="center"
                     android:layout_gravity="start"
-
                     />
 
                 <Button
                     style="?android:attr/buttonBarButtonStyle"
-                    android:id="@+id/deleteButton"
-                    android:text="@string/delete_button_label"
+                    android:id="@+id/row2Button2"
+                    android:text="@string/maps_button_label"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:background="@color/colorGrayer"
+                    android:background="@color/colorWhite"
                     android:textColor="@color/colorTextBlack"
                     android:paddingStart="5dp"
                     android:paddingEnd="5dp"
                     android:gravity="center"
                     android:layout_gravity="center_horizontal"
-
                     />
 
                 <Button
                     style="?android:attr/buttonBarButtonStyle"
-                    android:id="@+id/controlButton"
-                    android:text="@string/control_button_label"
+                    android:id="@+id/row2Button3"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:background="@color/colorGrayest"
+                    android:background="@color/colorWhite"
                     android:textColor="@color/colorTextBlack"
                     android:paddingStart="5dp"
                     android:paddingEnd="5dp"
                     android:gravity="center"
                     android:layout_gravity="end"
-
                     />
             </TableRow>
 
             <!-- Row 3 with 3 columns for buttons - - >
-            <!- List Points    Feature Codes     Exchange   -->
+            <!- row2Button1 row2Button2 row2Button3   -->
             <TableRow
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
@@ -166,60 +155,54 @@
                 android:paddingTop="10dp">
                 <Button
                     style="?android:attr/buttonBarButtonStyle"
-                    android:id="@+id/listPointsButton"
-                    android:text="@string/maintain_points_button_label"
+                    android:id="@+id/row3Button1"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:background="@color/colorGray"
+                    android:background="@color/colorWhite"
                     android:textColor="@color/colorTextBlack"
                     android:paddingStart="5dp"
                     android:paddingEnd="5dp"
                     android:gravity="center"
                     android:layout_gravity="start"
-
                     />
 
                 <Button
                     style="?android:attr/buttonBarButtonStyle"
-                    android:id="@+id/featureCodesButton"
-                    android:text="@string/feature_codes_button_label"
+                    android:id="@+id/row3Button2"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:background="@color/colorGrayer"
+                    android:background="@color/colorWhite"
                     android:textColor="@color/colorTextBlack"
                     android:paddingStart="5dp"
                     android:paddingEnd="5dp"
                     android:gravity="center"
                     android:layout_gravity="center_horizontal"
-
                     />
 
                 <Button
                     style="?android:attr/buttonBarButtonStyle"
-                    android:id="@+id/exchangeButton"
-                    android:text="@string/exchange_button_label"
+                    android:id="@+id/row3Button3"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:background="@color/colorGrayest"
+                    android:background="@color/colorWhite"
                     android:textColor="@color/colorTextBlack"
                     android:paddingStart="5dp"
                     android:paddingEnd="5dp"
                     android:gravity="center"
                     android:layout_gravity="end"
-
                     />
             </TableRow>
 
-        </TableLayout>
+            </TableLayout>
 
 
     </ScrollView>
 
     <!-- The Footer will be as standard as possible -->
-    <include layout="@layout/fragment_footer_inclusion_prism4_dmockup"/>
+    <include layout="@layout/fragment_footer_inclusion_prism4d"/>
     
 
 </LinearLayout>
